spec/e2e/assignment/prefix_operator.lit
var a = "a"
!a = "value" # error: [line 2] Syntax error at "=": Invalid assignment target.
